inc=include_directories('./include', './source')
lib=dependency('sysrepo-cpp')
lib1=dependency('libyang-cpp')
stc=static_library('stc',sources:['./source/NetConfAgent.cpp','./source/MobileClient.cpp'],include_directories:[inc],dependencies:[lib,lib1])
net=declare_dependency(link_with:[stc],include_directories:[inc])